--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,108 +1,7 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "java",
-      "name": "Genérica2",
-      "request": "launch",
-      "mainClass": "Genérica2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Genérica1",
-      "request": "launch",
-      "mainClass": "Genérica1",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "POA2",
-      "request": "launch",
-      "mainClass": "POA2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "POA1",
-      "request": "launch",
-      "mainClass": "POA1",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "POO2",
-      "request": "launch",
-      "mainClass": "POO2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "POO1",
-      "request": "launch",
-      "mainClass": "POO1",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Logica2",
-      "request": "launch",
-      "mainClass": "Logica2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Logica1",
-      "request": "launch",
-      "mainClass": "Logica1",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Funcional2",
-      "request": "launch",
-      "mainClass": "Funcional2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Procedimiento2",
-      "request": "launch",
-      "mainClass": "Procedimiento2",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Procedimiento1",
-      "request": "launch",
-      "mainClass": "Procedimiento1",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "type": "java",
-      "name": "Main",
-      "request": "launch",
-      "mainClass": "Main",
-      "projectName": "Tarea Darwin_f9c3125f"
-    },
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "c:/Users/Juan Felipe/OneDrive/Documentos/Tecnica Software/Tarea Darwin",
-      "program": "c:/Users/Juan Felipe/OneDrive/Documentos/Tecnica Software/Tarea Darwin/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
-    }
-  ]
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": []
 }
